--- a/styles/main.css
+++ b/styles/main.css
@@ -202,7 +202,7 @@ body{
     -webkit-text-fill-color: green; 
     position: absolute;  
   }
-  
+
   .prev-btn , .next-btn {
     box-shadow: 
       0 0 2px white,
@@ -210,4 +210,93 @@ body{
       -3px -3px 15px white;
     border-radius: 50%;
   }
+
+  .playlist{
+    position: absolute;
+    width: 300px;
+    bottom: -55%;
+    opacity: 0;
+    pointer-events: none;
+    left: 0;
+    box-shadow: 0px -5px 10px black;
+    z-index: 5;
+    padding: 15px 30px;
+    border-radius: 15px;
+    background: lightskyblue;
+    background-blend-mode: screen;
+    transition : all 0.15s ease-in-out;
+  }
+  
+  .playlist.show{
+    bottom: 0;
+    opacity: 1;
+    pointer-events: auto;
+  }
+
+  .playlist ul{
+    margin-top: 10px 0;
+    max-height: 260px;
+    overflow: auto;
+  }
+
+  .playlist ul li{
+    list-style: none;
+    display: flex; 
+    cursor: pointer;
+    padding-bottom: 10px;
+    margin-bottom: 5px;
+    color: black;
+    border-bottom:  1px solid white;
+  }
+
+  .playlist ul li:last-child{
+    border-bottom: 0px;
+  }
+
+  .playlist ul li .row span{
+    font-size: 17px;
+  }
+
+  .playlist ul li .row p{
+    opacity: 0.6;
+  }
+
+  ul li .song-duration{
+    font-size: 16px;
+  }
+
+  .header .row{
+    display: flex;
+    align-items: center;
+    font-size: 19px;  
+    color: darkolivegreen;
+  }
+  
+  .header .row i{
+    cursor: default;
+  }
+
+  .header .row span{
+    margin-left: 10px;
+  }
+
+  .header #closelist{
+    font-size: 22px;
+    margin-left: 3px;
+    color: darkolivegreen;
+  }
+
+  .playlist ul::-webkit-scrollbar{
+    width: 0;
+  }
+
+  .playlist ul li:hover{
+    color: blue;
+  }
+  
+  ul li.playing{
+    pointer-events: none;
+    color: blue;
+  }
+  
 
